--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="base-container">
   <div class="heading">
-    LOQO HİSSƏLƏRİNİ <br />
-    BİRLƏŞDİRİN VƏ HƏDİYYƏ QAZANIN!
+    LOQO HİSSƏLƏRİNİ BİRLƏŞDİRİN!
   </div>
   <div class="root">
     <div class="root-body">
